--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:postgresql://trolley.proxy.rlwy.net:34403/railway?sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=EuonkwyeqvqmUKIMxjefkIhiBMsjotCB
+spring.datasource.url=${DATABASE_PUBLIC_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
